# DSPy-NER-Experiment

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
evaluation/: metrics.py  multi_sentence_metrics.py
experiments/: run_baseline_comparison.py  run_dspy_variants_comparison.py  run_multi_sentence_comparison.py  run_optimization.py  test_prompt_caching.py
scripts/: generate_multi_sentence_ner_data.py  generate_ner_data.py
src/: config.py
src/baselines/: regex_ner.py  spacy_ner.py
src/data/: ground_truth.json  ner_samples.json
src/modules/: entity_extractor.py  entity_extractor_implicit.py
src/utils/: async_runner.py
streamlit_app/components/: __init__.py  dspy_internals.py  metrics_display.py  sample_viewer.py  sidebar.py
streamlit_app/utils/: __init__.py  async_experiment_runner.py  data_loader.py  experiment_runner.py
